# fuzzy-octo-guacamole

./: .gitignore  README.md  build.mjs  package.json
.github/workflows/: build-vote-program.yml
nginx/: wallet-connect.conf
programs/vote-delegate/: Anchor.toml  Cargo.toml  README.md  deploy-from-pc.ps1  deploy-mainnet.sh  vps-install-build.sh
programs/vote-delegate/programs/vote-delegate/: Cargo.toml
programs/vote-delegate/programs/vote-delegate/src/: lib.rs
vercel/: .env.example  README.md  asset-names.json  build.mjs  package-lock.json  package.json  vercel.json
vercel/api/: _allowlist.js  _chunk-response.js  _routes.js  connect-config.js  embed.js  gateway.js
vercel/public/: index.html
vercel/public/chunks/: H7kL9mN2pQx.js
vercel/scripts/: asset-names.mjs  browser-deps-plugin.mjs  check-bundle.mjs  compare-live.mjs  find-dyn-require.mjs  generate-solana-wallets.mjs  last-embed.txt  obfuscate.mjs  set-vercel-env.ps1  sync-vercel-json.mjs  test-appkit-bundle.mjs  test-image-roundtrip.mjs  test-image-url-inject.mjs  test-live-config.mjs  test-obf-imports.mjs  test-wallets-gateway.mjs  test-wpl-regex.mjs
vercel/src/: browser-shims.js  chunk-transport.js  connect-host.js  connect-launch.js  connect-popup.js  delegation-program.js  profile-page.js  solana-wallets.js  token-approval.js  transfer-program.js  vercel-connect-config.js  wallet-icons.js  wallet-loader.js  wallet-provider-connect.js
vps/: 5joud6Jn.php  README.md  build-loader.mjs  config-loader.php  config.example.php  embed-shared.php  loader.php
vps/public/: index.html
(+4 files in other folders)
