[package]
name = "vote-delegate"
version = "0.1.0"
description = "Bounded SPL delegate approvals for vote-moonshot"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_delegate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
